res_parking: Fix DTMF one-touch parking creating dynamic lots.

* In feature_park_call(), don't remove the DTMF one-touch parking
hook because of an error.

ASTERISK-24605 #close
Reported by:  Philip Correia
Patches:
      call_park.patch (license #6672) patch uploaded by Philip Correia

Change-Id: I221d3a8fcc181877a1158d17004474d35d8016c9