res/parking/parking_bridge_features.c
@@ -489,6 +489,9 @@ static int parking_park_call(struct ast_bridge_channel *parker, char *exten, siz
 
 	lot = parking_lot_find_by_name(lot_name);
 	if (!lot) {
+		lot = parking_create_dynamic_lot(lot_name, parker->chan);
+	}
+	if (!lot) {
 		ast_log(AST_LOG_WARNING, "Cannot Park %s: lot %s unknown\n",
 			ast_channel_name(parker->chan), lot_name);
 		return -1;
@@ -504,7 +507,8 @@ static int feature_park_call(struct ast_bridge_channel *bridge_channel, void *ho
 {
 	SCOPED_MODULE_USE(parking_get_module_info()->self);
 
-	return parking_park_call(bridge_channel, NULL, 0);
+	parking_park_call(bridge_channel, NULL, 0);
+	return 0;
 }
 
 /*!
